k8s/url-shortener-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-deployment
  labels:
    app: url-shortener
spec:
  replicas: 3 # Changed from 3 to 2 as our HPA will handle scaling with minReplicas: 2
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
      - name: url-shortener
        image: url-shortener:v1
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 100m  # Increased from 100m to better measure CPU usage
            memory: 128Mi
          limits:
            cpu: 300m  # Increased from 250m
            memory: 256Mi
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
